# pocketforge

./: .gitignore  CMakeLists.txt  README.md
include/forge/: engine.hpp  gguf_reader.hpp  http_server.hpp  kv_cache.hpp  layer_skip.hpp  matmul_neon.hpp  mtp.hpp  prefetch.hpp  quant_format.hpp  tokenizer.hpp  types.hpp
models/hf_cache/models--ewinregirgojr--MiniCPM5-1B-Agentic-Tooluse-GGUF/refs/: main
src/: engine.cpp  forge_server.cpp  gguf_reader.cpp  http_server.cpp  kv_cache.cpp  layer_skip.cpp  main.cpp  matmul_neon.cpp  mtp.cpp  prefetch.cpp  quant_format.cpp  quant_tool.cpp  tokenizer.cpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_engine.cpp  test_gguf_reader.cpp  test_kv_cache.cpp  test_layer_skip.cpp  test_matmul.cpp  test_memory.cpp  test_mtp.cpp  test_prefetch.cpp  test_quant_format.cpp  test_tool_accuracy.cpp  test_tool_calling.cpp  test_types.cpp
toolchains/: armv7a-linux-android.cmake
